fixed StyleSheets on mobile devices

--- a/modules/admin/src/app/app.scss
+++ b/modules/admin/src/app/app.scss
@@ -11,12 +11,12 @@ body {
     }
 }
 
-.ag-body-viewport {
-  overflow-y: hidden !important;
+.md-card {
+    height: 100%;
 }
 
-.ag-overlay-no-rows-center {
-  display: none;
+.ag-body-viewport {
+  overflow-y: hidden !important;
 }
 
 .ag-paging-panel {
