--- a/modules/admin/src/app/navigation/navigation.scss
+++ b/modules/admin/src/app/navigation/navigation.scss
@@ -28,6 +28,7 @@
 
 .sidenav-root {
     font-family: Roboto, 'Helvetica Neue', sans-serif;
+    overflow: auto;
 
     // Helps fonts on OSX looks more consistent with other systems
     // Isn't currently in button styles due to performance concerns
