--- a/modules/admin/src/app/sidebar/sidebaritem.scss
+++ b/modules/admin/src/app/sidebar/sidebaritem.scss
@@ -112,6 +112,7 @@ ul {
     }
     .show-nav {
         display: block !important;
+        width: 100%;
     }
     .item-menu {
         width: 100% !important;
